# tacoreader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
docs/: index.md  modules.md
tacoreader/: TortillaDataFrame.py  __init__.py  _cache.py  _constants.py  _exceptions.py  _format.py  _html.py  _legacy.py  _logging.py  _nest_asyncio.py  _path.py  _remote_io.py  _schema.py  _stac.py  _stac_cascade.py  _stats.py  _tree.py  _vsi.py  compile.py  compile_utils.py  concat.py  constants.py  croissant.py  datacard.py  datacite.py  dataframe.py  dataset.py  datasets.py  io.py  load.py  load_local.py  load_remote.py  load_utils.py  loader.py  loader_dataframe.py  loader_metadata.py  loader_utils.py  remote_io.py  sanity.py  schema.py  (+1 more)
tacoreader/backends/: __init__.py  base.py  folder.py  tacocat.py  zip.py
tacoreader/backends/dataframe/: __init__.py  base.py  pyarrow.py
tacoreader/backends/storage/: __init__.py  folder.py  tacocat.py  zip.py
tacoreader/concat/: __init__.py  _columns.py  _orchestrator.py  _validation.py  _view_builder.py
tacoreader/dataframe/: __init__.py  _stats.py  base.py  pandas.py  polars.py  pyarrow.py
tacoreader/folder/: metadata.py  multi.py  reader.py
tacoreader/pandas/: __init__.py  load.py  load_json.py  multidataframe.py  query.py  stats.py  treedataframe.py
tacoreader/storage/: __init__.py  base.py  folder.py  tacocat.py  zip.py
tacoreader/utils/: format.py  stats.py  vsi.py
tacoreader/v1/: TortillaDataFrame.py  __init__.py  compile.py  compile_utils.py  loader_dataframe.py  loader_metadata.py  loader_utils.py  sanity.py
tacoreader/zip/: metadata.py  multi.py  reader.py
tests/: conftest.py  test_foo.py
tests/fixtures/: README.md  regenerate.py
tests/fixtures/folder/deep/: COLLECTION.json
tests/fixtures/folder/deep/DATA/tile_01/sensor_B/: band_G
tests/fixtures/folder/deep/DATA/tile_02/sensor_A/: __meta__  band_B
tests/fixtures/folder/deep/DATA/tile_05/sensor_B/: band_R
tests/fixtures/folder/deep/DATA/tile_10/sensor_A/: __meta__
tests/fixtures/folder/deep/DATA/tile_14/: __meta__
tests/fixtures/folder/deep/DATA/tile_15/sensor_A/: __meta__
tests/fixtures/folder/deep/DATA/tile_19/: __meta__
tests/fixtures/folder/deep/METADATA/: level0.parquet  level1.parquet  level2.parquet
tests/fixtures/folder/flat/: COLLECTION.json
tests/fixtures/folder/flat/DATA/: sample_0  sample_1  sample_2  sample_3  sample_4
tests/fixtures/folder/flat/METADATA/: level0.parquet
tests/fixtures/folder/nested/: COLLECTION.json
tests/fixtures/folder/nested/DATA/americas/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested/DATA/asia/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested/DATA/europe/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested/METADATA/: level0.parquet  level1.parquet
tests/fixtures/zip/cascade/: cascade_part0001.tacozip  cascade_part0002.tacozip  cascade_part0003.tacozip  cascade_part0004.tacozip
tests/fixtures/zip/cascade/.tacocat/: COLLECTION.json  level0.parquet  level1.parquet  level2.parquet
tests/fixtures/zip/deep/: deep_part0001.tacozip  deep_part0002.tacozip
tests/fixtures/zip/deep/.tacocat/: COLLECTION.json  level0.parquet  level1.parquet  level2.parquet
tests/fixtures/zip/flat/: flat.tacozip
tests/fixtures/zip/nested/: nested.tacozip
tests/integration/: test_base_integration.py  test_dataframe_backends.py  test_dataset_coverage.py  test_html_integration.py  test_load.py  test_stac_integration.py  test_stats_integration.py  test_storage_integration.py
tests/unit/: test_backends.py  test_cache.py  test_concat.py  test_dataframe_factory.py  test_format.py  test_html.py  test_init.py  test_loader.py  test_logging.py  test_navigation.py  test_schema.py  test_stac.py  test_stats.py  test_storage_unit.py  test_vsi.py
