[tool.poetry]
name = "tacoreader"
version = "2.0.0a17"
description = "We read tacos"
authors = ["Cesar Aybar <cesar.aybar@uv.es>"]
repository = "https://github.com/tacofoundation/tacoreader"
documentation = "https://tacofoundation.github.io/tacoreader/"
readme = "README.md"
packages = [
  {include = "tacoreader"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyarrow = ">=21.0.0"
polars = ">=1.25.2"
obstore = ">=0.8.1"
tacozip = ">=0.11.4"
duckdb = ">=1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["tacoreader"]
exclude = [
    "^tacoreader/v1/",
    "^tests/"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM",
    "I", "C90", "E", "W", "F", "PGH", "UP",
    "RUF", "TRY"
]
ignore = ["E501", "E731", "TRY003", "F401", "F821", "S311", "A004", "A001"]
per-file-ignores = { "tests/*" = ["S101"],  "tacoreader/v1/*" = ["ALL"], "tacoreader/_nest_asyncio.py" = ["ALL"] }

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tacoreader"]
