[project]
name = "tacoreader"
version = "2.4.5"
description = "Query engine for AI-ready datasets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [{name = "Cesar Aybar", email = "cesar.aybar@uv.es"}]
keywords = [
    "earth-observation",
    "geospatial",
    "machine-learning",
    "satellite-imagery",
    "remote-sensing",
    "ai-ready-datasets",
    "duckdb",
    "stac",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "pyarrow>=21.0.0",
    "duckdb>=1.3.2",
    "pydantic>=2.12.5",
    "obstore>=0.8.1",
    "tacozip>=0.11.4",
    "tqdm>=4.67.1",
    "platformdirs (>=4.5.1,<5.0.0)",
]

[project.optional-dependencies]
polars = ["polars>=1.0.0"]
pandas = ["pandas>=2.0.0"]
stats = ["numpy>=1.24"]
all = ["polars>=1.0.0", "pandas>=2.0.0", "numpy>=1.24"]

[project.urls]
Repository = "https://github.com/tacofoundation/tacoreader"
Documentation = "https://tacofoundation.github.io/tacoreader/"
"Bug Tracker" = "https://github.com/tacofoundation/tacoreader/issues"
Changelog = "https://github.com/tacofoundation/tacoreader/releases"

[tool.poetry]
packages = [{include = "tacoreader"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = ">=0.9"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["tacoreader"]
exclude = ["^tacoreader/v1/", "^tests/"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "remote: marks tests requiring network access",
]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
filterwarnings = [
    "ignore::DeprecationWarning:duckdb.*",
    "ignore:.*pyarrow.*:FutureWarning",
    "ignore:.*pydantic.*:DeprecationWarning",
    "ignore:.*Polars found a filename.*:UserWarning:polars.*",
    "ignore::DeprecationWarning:obstore.*",
]
norecursedirs = [".git", ".tox", "dist", "build", "__pycache__", "tacoreader/v1"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["tacoreader/v1"]
force-exclude = true
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF", "S", "C90", "PGH", "TRY", "YTT", "T10", "A", "D"]
ignore = ["E501", "E731", "TRY003", "S311", "A001", "A002", "A004", "S608", "RUF059", "D100", "D104", "D105", "D107", "D102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D"]
"tacoreader/_html.py" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["tacoreader"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.coverage.run]
branch = true
source = ["tacoreader"]
omit = ["tacoreader/v1/*", "tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    "def _repr_html_",
    "^\\s*\\.\\.\\.\\s*$",
    "^\\s*pass\\s*$",
    "except ImportError:",
    "HAS_PANDAS = False",
    "HAS_POLARS = False",
    "HAS_NUMPY = False",
]
exclude_also = ["@overload"]